examples/test/testpolicy2283.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2283
  namespace: namespace392
spec:
  podSelector:
    matchLabels:
      key16: value25
      key23: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value13
      podSelector:
        matchLabels:
          key37: value37
          key23: value11
